--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,3 +1,9 @@
+.splash-content {
+  // border: 10px solid black;
+  // width: 100%;
+  // height: 100%;
+}
+
 .splash-bg {
   z-index: -3;
   position: absolute;
@@ -10,10 +16,13 @@
   object-fit: cover;
 }
 
+
 .splash-modal {
+  // border: 5px solid red;
   display: flex;
   justify-content: center;
   position: absolute;
+  flex-direction: row-reverse;
   z-index: -2;
   left: 0;
   top: 0;
@@ -23,57 +32,95 @@
 }
 
 .splash-modal-content {
+  display: block;
+  // border: 5px solid green;
   text-align: center;
   position: absolute;
-  margin: 15% auto;
+  // margin: 15% auto;
+  margin-top: 210px;
   z-index: 0;
   background-color: transparent;
   padding: 20px;
   width: 60%;
   color: white;
-  
-  .btn {
+
+  .unlimited-movie{
+    display: flex;
     font-family: sans-serif;
-    border-radius: 2px;
+    margin: auto;
+    justify-content: center;
+    // flex-wrap: wrap-reverse;
+    // border: 5px solid blue;
+    font-size: 60px;
+    inline-size: 700px;
+  }
+  .watch-anywhere{
+    font-size: 26px;
+    // padding-bottom: 40px;
+    font-family: Helvetica;
+    margin: auto;
+    color: rgba(255, 255, 255, 0.8); 
+  
+  }
+
+  .sign-up-container{
+    // border:  6px solid orange;
+    margin: auto;
+    // position: relative;
+    // padding: 30px;
+    // overflow-wrap: none;
+  }
+  .sign-up-input{
+    // position: static;
+    // border: 6px solid yellow;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    font-size: 16px;
+    padding: 25px;
+    width: 500px;
+    // margin: auto;
+    // margin-left: 20px;
+  }
+  .greeting-btn {
+    // position: absolute;
+    // display: block;
     color: white;
+    padding: 27px;
+    // padding-bottom: 28x;
+    // padding-top: 28px;
+    // margin: 5px;
     background-color: red;
+    border-radius: 4px;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-weight: 600;
+    
+    // margin-left: 20px;
+    
     &:hover{
       background-color: #f7252f;
     }
+  
   }
   
-  h1 {
-    font-family: sans-serif;
-    font-size: 70px;
-    padding: 20px;
-  }
+  // h1 {
+  //   font-family: sans-serif;
+  //   font-size: 50px;
+  //   // padding: 20px;
+  // }
   
-  h2 {
-    font-size: 30px;
-    padding-bottom: 40px;
-    font-family: sans-serif;
-  }
+  // h2 {
+  //   font-size: 30px;
+  //   padding-bottom: 40px;
+  //   font-family: sans-serif;
+  // }
   
   h3 {
     padding-bottom: 25px;
     font-family: sans-serif;
   }
   
-  .greeting-btn {
-    color: white;
-    padding: 20px;
-    padding-bottom: 7px;
-    padding-top: 7px;
-    margin: 5px;
-    background-color: red;
-    border-radius: 4px;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-weight: 600;
-    &:hover{
-      background-color: #f7252f;
-    }
-  }
 }
 
 
