--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,63 +1,55 @@
-.splash-content {
-  // border: 10px solid black;
-  // width: 100%;
-  // height: 100%;
-}
-
-.splash-bg {
-  z-index: -3;
-  position: absolute;
-  top: 0;
-  left: 0;
+body {
+  margin: 0; 
+  // z-index: -2;
+  // left: 0;
+  // top: 0;
+  // bottom: 0;
   // right: 0;
-  // height: 100vh;
+  // background-color: rgba(0,0,0,0.6);
+}
+.splash-content {
+  // border: 10px solid yellow;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
-
-
-.splash-modal {
-  // border: 5px solid red;
+  position: absolute;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  position: absolute;
-  flex-direction: row-reverse;
-  z-index: -2;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(0,0,0,0.6); 
-
+  align-items: center;
+  // .second-splash-section{
+  // border: 5px solid orange;
+  // margin-top: 40%;
+  // color: white;
+  // background-color: black;
   
-}
-.logo{
-    margin-left: 2%;
-    margin-top: .8%;
-  }
-.splash-modal-content {
-  display: block;
-  // border: 5px solid green;
-  text-align: center;
-  position: absolute;
-  // margin: 15% auto;
+  .splash-modal-content {
+  display: flex;
+  flex-direction: column;
+  // border: 5px solid darkcyan;
+  // text-align: center;
+  // // position: absolute;
+  // // margin: 15% auto;
   margin-top: 210px;
-  z-index: 0;
-  background-color: transparent;
-  padding: 20px;
-  width: 60%;
-  color: white;
+  // z-index: 0;
+  // background-color: transparent;
+  // padding: 20px;
+  // width: 60%;
+  // color: white;
 
   .unlimited-movie{
+    padding-left: 100px;
     display: flex;
     font-family: sans-serif;
     margin: auto;
     justify-content: center;
+    // text-align: center;
+    word-wrap: break-word;
+    white-space: normal;
     // flex-wrap: wrap-reverse;
     // border: 5px solid blue;
-    font-size: 60px;
-    inline-size: 700px;
+    font-size: 50px;
+    inline-size: 550px;
+    color: white;
   }
   .watch-anywhere{
     padding-top: 20px;
@@ -111,7 +103,7 @@
       background-color: #f7252f;
     }
   
-  }
+  
   
   // h1 {
   //   font-family: sans-serif;
@@ -125,26 +117,67 @@
   //   font-family: sans-serif;
   // }
   
-  // h3 {
-  //   padding-bottom: 25px;
-  //   font-family: sans-serif;
-  // }
   
+
 }
+h3 {
+    color: white;
+    margin: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-family: sans-serif;
+  }
+}
+.logo{
+    margin-left: 2%;
+    margin-top: 5%;
+    
+  }
 
-
-
-.banner {
-  display: flex;
-  // margin: 10px;
-  flex-direction: row;
-  justify-content: space-between;
-  position: absolute;
-  z-index: 2;
+.second-splash-section{
+  // position: absolute;
+  background-color: black;
   width: 100%;
-  align-items: center;
-  
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
+  // padding-top: 100px;
+  color: white;
+  border: 5px solid green;
+
+    .splash-second-contents{
+      font-size: 25px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      border: 5px solid salmon;
+      margin-right: 400px;
+      inline-size: 700px;
+      height: 250px;
+    }
 }
+}
+  
+
+
+.splash-bg {
+  // border: 5px solid red;
+  z-index: -3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  // right: 0;
+  // height: 100vh;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  // background-repeat: no-repeat;
+  // background-attachment: fixed;
+}
+
+
+
+
 
 .header-container{
   // border: 6px solid aqua;
@@ -176,3 +209,17 @@
 }
 
 }
+
+.overlay {
+  // border: 5px solid green;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  flex-direction: row-reverse;
+  z-index: -2;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.6); 
+  }
