--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // .second-splash-section{
+  // .third-splash-section{
   // border: 5px solid orange;
   // margin-top: 40%;
   // color: white;
@@ -25,19 +25,22 @@ body {
   .splash-modal-content {
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   // border: 5px solid darkcyan;
   // text-align: center;
   // // position: absolute;
   // // margin: 15% auto;
-  margin-top: 210px;
+  margin-top: 1600px;
   // z-index: 0;
   // background-color: transparent;
   // padding: 20px;
   // width: 60%;
   // color: white;
+  
 
   .unlimited-movie{
     padding-left: 100px;
+    padding-top: 130px;
     display: flex;
     font-family: sans-serif;
     margin: auto;
@@ -129,7 +132,7 @@ h3 {
   }
 }
 .logo{
-    margin-left: 2%;
+    margin-left: 5%;
     margin-top: 5%;
     
   }
@@ -139,21 +142,212 @@ h3 {
   background-color: black;
   width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  margin-top: 200px;
-  // padding-top: 100px;
+  align-items: center;
+  margin-top: 170px;
+  // padding: 100px;
   color: white;
-  border: 5px solid green;
+  border: 4px solid darkgray;
 
     .splash-second-contents{
       font-size: 25px;
       display: flex;
+      max-width: 500px;
       flex-direction: column;
-      justify-content: center;
-      border: 5px solid salmon;
-      margin-right: 400px;
+      align-content: flex-start;
+      justify-content: space-between;
+      margin: 0;
+      padding: 0;
+      bottom: 0;
+      align-items: stretch;
+      align-content: stretch;
       inline-size: 700px;
-      height: 250px;
+      margin-bottom: 70px;
+      margin-right: 200px;
+      // border: 5px solid red;
+
+      .download-shows{
+        margin-top: 100px;
+        margin-bottom: 0px;
+        display: flex;
+      }
+
+      .save-favorites{
+        font-family: sans-serif;
+        font-size: 23px;
+         color: rgba(255, 255, 255, 0.9);
+        display: flex;
+      }
+    }
+}
+.third-splash-section{
+  // position: absolute;
+  background-color: black;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  // justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  // align-content: flex-start;
+  // margin-top: 200px;
+  // padding: 100px;
+  color: white;
+  border: 4px solid darkgray;
+  // height: 700px;
+
+    .splash-third-contents{
+      // padding-top: 100px;
+      font-size: 25px;
+      display: flex;
+      max-width: 500px;
+      // margin-left: 200px;
+      // flex-wrap: nowrap;
+      flex-direction: column;
+      align-content: flex-start;
+      justify-content: space-between;
+      margin: 0;
+      padding: 0;
+      bottom: 0;
+      align-items: stretch;
+      align-content: stretch;
+      // justify-content: center;
+      // border: 5px solid salmon;
+      // margin-right: 400px;
+      // transform: translate(-350px);
+      inline-size: 700px;
+      // height: 400px;
+      //  min-width: 0;
+      margin-bottom: 70px;
+      margin-right: 200px;
+
+      .enjoy-tv{
+        // text-align: center;
+        // border: 5px solid blue;
+        margin-top: 100px;
+        margin-bottom: 0px;
+        display: flex;
+        // justify-content: center;
+      }
+
+      .smart-tv{
+        // margin-top: 0px;
+        font-family: sans-serif;
+        font-size: 23px;
+        // margin-bottom: 5;
+        // width: 400px;
+         color: rgba(255, 255, 255, 0.9); 
+        // border: 5px solid white;
+        display: flex;
+        // justify-content: center;
+      }
+    }
+}
+.fourth-splash-section{
+  // position: absolute;
+  background-color: black;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  // margin-top: 200px;
+  // padding: 100px;
+  color: white;
+  border: 4px solid darkgray;
+
+    .splash-fourth-contents{
+      font-size: 25px;
+      display: flex;
+      max-width: 500px;
+      flex-direction: column;
+      align-content: flex-start;
+      justify-content: space-between;
+      margin: 0;
+      padding: 0;
+      bottom: 0;
+      align-items: stretch;
+      align-content: stretch;
+      inline-size: 700px;
+      margin-bottom: 70px;
+      margin-right: 200px;
+
+      .download-shows{
+        margin-top: 100px;
+        margin-bottom: 0px;
+        display: flex;
+      }
+
+      .save-favorites{
+        font-family: sans-serif;
+        font-size: 23px;
+         color: rgba(255, 255, 255, 0.9);
+        display: flex;
+      }
+    }
+}
+.fifth-splash-section{
+  // position: absolute;
+  background-color: black;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  // justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  // align-content: flex-start;
+  // margin-top: 200px;
+  // padding: 100px;
+  color: white;
+  border: 4px solid darkgray;
+  // height: 700px;
+
+    .splash-fifth-contents{
+      // padding-top: 100px;
+      font-size: 25px;
+      display: flex;
+      max-width: 500px;
+      // margin-left: 200px;
+      // flex-wrap: nowrap;
+      flex-direction: column;
+      align-content: flex-start;
+      justify-content: space-between;
+      margin: 0;
+      padding: 0;
+      bottom: 0;
+      align-items: stretch;
+      align-content: stretch;
+      // justify-content: center;
+      // border: 5px solid salmon;
+      // margin-right: 400px;
+      // transform: translate(-350px);
+      inline-size: 700px;
+      // height: 400px;
+      //  min-width: 0;
+      margin-bottom: 70px;
+      margin-right: 200px;
+
+      .enjoy-tv{
+        // text-align: center;
+        // border: 5px solid blue;
+        margin-top: 100px;
+        margin-bottom: 0px;
+        display: flex;
+        // justify-content: center;
+      }
+
+      .smart-tv{
+        // margin-top: 0px;
+        font-family: sans-serif;
+        font-size: 23px;
+        // margin-bottom: 5;
+        // width: 400px;
+         color: rgba(255, 255, 255, 0.9); 
+        // border: 5px solid white;
+        display: flex;
+        // justify-content: center;
+      }
     }
 }
 }
@@ -222,4 +416,15 @@ h3 {
   bottom: 0;
   right: 0;
   background-color: rgba(0,0,0,0.6); 
+  }
+
+  .splash-footer{
+    display: block;
+    width: 100%;
+    // border: 4px solid red;
+    background-color: rgb(58, 58, 58)
+  }
+
+  footer{
+    background-color: gray;
   }
