--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -7,6 +7,12 @@ body {
   // right: 0;
   // background-color: rgba(0,0,0,0.6);
 }
+
+.logo{
+    margin-left: 5%;
+    margin-top: .9%;
+    
+  }
 .splash-content {
   // border: 10px solid yellow;
   width: 100%;
@@ -30,7 +36,7 @@ body {
   // text-align: center;
   // // position: absolute;
   // // margin: 15% auto;
-  margin-top: 1600px;
+  margin-top: 1800px;
   // z-index: 0;
   // background-color: transparent;
   // padding: 20px;
@@ -131,11 +137,7 @@ h3 {
     font-family: sans-serif;
   }
 }
-.logo{
-    margin-left: 5%;
-    margin-top: 5%;
-    
-  }
+
 
 .second-splash-section{
   // position: absolute;
@@ -326,7 +328,8 @@ h3 {
       // height: 400px;
       //  min-width: 0;
       margin-bottom: 70px;
-      margin-right: 200px;
+      margin-right: 220px;
+      margin-left: 220px;
 
       .enjoy-tv{
         // text-align: center;
@@ -415,7 +418,7 @@ h3 {
   top: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0,0,0,0.6); 
+  background-color: rgba(0,0,0,.75); 
   }
 
   .splash-footer{
