--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -6,64 +6,61 @@ body{
     border: 5px solid black;
 }
 .profile-container{
-    margin-top: 180px;
-//   border: 5px solid white;
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: space-evenly;
-//   align-items: center;
-//   text-align: center;
-//   min-height: 100vh;
-
-
-    .profile-list-container{
-     color: white;
-    // margin: auto;
-    border: 5px solid rgb(146, 0, 0);
+    // border: 5px solid red;
+    margin: 0 auto;
+    width: 50%;
+    height: 50%;
     display: flex;
-    flex-direction: row;
-    width: 100px;
-    height: 100px;
-
-    // ul {
-    //     size: 1000px;
-    //     list-style: none;
-    //     display: flex;
-
-    //     flex-direction: row;
-    //     justify-content: space-evenly;
-    // }
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    padding-top: 10%;
+    // margin-top: 2%;
     
-    
-}
+
+
 }
 
 .profile-list{
+    // margin-top: 0px;
     color: white;
-    width: 1000px;
-    // border: 5px soild red;
+    width: 800px;
+    border: 5px soild rgb(255, 255, 255);
         // size: 1000px;
         // list-style: none;
-        margin-top: 100px;
-        margin: auto;
+        // margin-top: 100px;
+        // margin: auto;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         padding: 5px
+        
 }
 .p-list{
     margin: 5px;
     // margin-right: 10px;
 }
 .manage-container{
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     // border: 4px solid red;
-    margin: auto;
+    // margin: auto;
+    margin-top: 60px;
+
+
     .manage-profile {
-    color: white;
-   
-    font-size: 50px;
+    border: 1px solid gray;
+    color: gray;
+    background: none;
+    cursor: pointer;
+    font-weight: 200;
+    // padding: 5px;
+    // background-color: rgb(68, 68, 68,);
+    font-size: 30px;
+    &hover{
+        color: white;
+    }
 }
 }
 
@@ -80,3 +77,7 @@ body{
     color: white;
 }
 
+.profile-index-item-container img:hover{
+    border: 5px solid white;
+
+}
