--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <% if profile_found? %>
-        <%# <% debugger %> %>
+        <%# <% debugger %> 
         <script type='text/javascript'>
             window.current_profile = <%= render(
                 'api/profiles/profile.json.jbuilder',
