--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -9,31 +9,93 @@ body{
     // border: 5px solid red;
     margin: 0 auto;
     width: 50%;
-    height: 50%;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    text-align: center;
-    padding-top: 10%;
-    margin-top: 0;
+    // padding-top: 10%;
+    margin-top: 50px;
+    
 }
 
 .profile-list{
-    // margin-top: 0px;
+    // margin-top: 0;
+    min-width: 100px;
+   text-align: center;
     color: white;
-    width: 800px;
-    border: 5px soild rgb(255, 255, 255);
-        // size: 1000px;
-        // list-style: none;
-        // margin-top: 100px;
-        // margin: auto;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        padding: 5px
+    // width: 100%;
+    justify-content: center;
+    // border: 5px soild rgb(255, 255, 255);
+    display: flex;
+    // flex-direction: row;
+    // justify-content: spac;
+    // margin: 20px;
+
+    padding: 5px;
+    // border: 5px solid rgb(38, 21, 194);
+
         
 }
+.add-img{
+    margin-top: 40px;
+}
+
+// .ul-list-profile{
+//     border: 5px solid rgb(0, 255, 64);
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-evenly;
+
+
+// }
+
+.ul-list-profile ul {
+    margin: 20px;
+
+    // border: 5px solid red;
+    display: flex;
+    justify-content: center;
+    // flex-direction: column;
+
+}
+
+.ul-list-profile li {
+    
+    // border: 5px solid rgb(8, 255, 173);
+    display: flex;
+    justify-content: center;
+    // margin-right: 10px;
+    // margin-top: 20px;
+    // margin-bottom: 20px;
+    margin: 20px;
+    // justify-content: space-evenly;
+    // flex-direction: column;
+
+}
+.ul-list-profile-manage ul{
+    margin: 20px;
+
+    // border: 5px solid red;
+    display: flex;
+    justify-content: center;
+}
+.ul-list-profile-manage li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    // margin-right: 10px;
+    // margin-top: 20px;
+    // margin-bottom: 20px;
+    margin: 20px;
+}
+// .profile-list ul{
+//     border: 5px solid red;
+//     width: 200px;
+//     justify-content: space-evenly;
+//     margin-right: 20px;
+//     display: flex;
+
+// }
 .p-list{
     margin: 5px;
     // margin-right: 10px;
@@ -63,9 +125,9 @@ body{
     background: none;
     cursor: pointer;
     font-weight: 200;
-    // padding: 5px;
-    // background-color: rgb(68, 68, 68,);
+    background-color: rgb(68, 68, 68,);
     font-size: 30px;
+    // margin-bottom: 100;
 }
 
 
@@ -82,16 +144,23 @@ body{
 .manage-profile{
     color: white;
 }
-
+// .profile-index-item-container{
+//     display: flex;
+//     margin: auto;
+//     justify-content: center;
+//     align-items: center;
+//     // border: 4px solid red;
+// }
 .profile-index-item-container img:hover{
-    border: 5px solid white;
+    // border: 2px solid white;
+    box-shadow:  0 0 0 2px #ffffff
+    
 
 }
-// .add_img{
-//     border: 5px solid red;
-// }
-.add-img:hover{
-    border: 5px solid white;
+
+
+.add-img img:hover{
+    box-shadow:  0 0 0 2px #ffffff
 }
 .manage-container:hover{
     border: white;
@@ -107,67 +176,8 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    // label{
-    //     border: 4px solid red;
-    //     // margin-top: 20%;
-    //     margin-left: 300px;
-    //     align-content: center;
-    //     color: red;
-    //     size: 200px;
-    //     margin-bottom: 100px;
-    // }
-
-    // img{
-    //     border: 4px solid red;
-    //     margin: auto;
-    //     margin-left: 100px;
-    //     margin-top: 220px;
-    // }
-
-    
+     margin-top: 220px;  
 }
-
-// .p-container{
-//     // border: 4px sold red;
-
-// }
-
-// .form-buttons{
-//     // margin-top: 400px;
-//     display: flex;
-//     justify-content: space-evenly;
-//     // border: 4px solid red;
-//     color: gray;
-//     background: none;
-//     cursor: pointer;
-//     font-weight: 200;
-//     // padding: 5px;
-//     // background-color: rgb(68, 68, 68,);
-//     font-size: 30px;
-// }
-
-// .img-label{
-//         // border: 6px solid red;
-//         margin-top: 100px;
-//         display: flex;
-//         justify-content: space-evenly;
-//         flex-direction: row;
-//         margin-bottom: 200px;
-    
-//     label {
-//         margin-top: 50px;
-//         align-content: center;
-//         align-items: center;
-//         // font-size: 50px;
-//         // margin-bottom: 200px;
-//     }
-//     input{
-//         padding: 25px;
-//     }
-
-//     }
-
 .edit-title{
     display: flex;
     justify-content: center;
@@ -237,7 +247,19 @@ body{
     width: 100%;
     border-top: 2px solid rgba(128, 128, 128, .5);
 }
-
+.done-button{
+    color: black;
+    background: white;
+    // margin-top: 8%;
+    padding: 10px;
+    width: 100px;
+    cursor: pointer;
+    font-size: 20px;
+}
+.done-button:hover{
+    background: red;
+    color: white;
+}
 .save-button{
     color: black;
     background: white;
