--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -36,7 +36,7 @@ body {
   // text-align: center;
   // // position: absolute;
   // // margin: 15% auto;
-  margin-top: 1200px;
+  margin-top: 1800px;
   // z-index: 0;
   // background-color: transparent;
   // padding: 20px;
@@ -182,6 +182,10 @@ h3 {
         display: flex;
       }
     }
+    .vid-con{
+      margin-top: 80px;
+      margin-bottom: 80px;
+    }
 }
 .third-splash-section{
   // position: absolute;
@@ -200,6 +204,8 @@ h3 {
   // height: 700px;
 
     .splash-third-contents{
+      // border: 5px solid red;
+
       // padding-top: 100px;
       font-size: 25px;
       display: flex;
@@ -224,26 +230,32 @@ h3 {
       margin-bottom: 70px;
       margin-right: 200px;
 
-      .enjoy-tv{
-        // text-align: center;
-        // border: 5px solid blue;
-        margin-top: 100px;
-        margin-bottom: 0px;
-        display: flex;
-        // justify-content: center;
-      }
+    }
+    .text-section{
+    border: 5px solid red;
 
-      .smart-tv{
-        // margin-top: 0px;
-        font-family: sans-serif;
-        font-size: 23px;
-        // margin-bottom: 5;
-        // width: 400px;
-         color: rgba(255, 255, 255, 0.9); 
-        // border: 5px solid white;
-        display: flex;
-        // justify-content: center;
-      }
+    }
+    .enjoy-tv{
+    // border: 5px solid red;
+
+      // text-align: center;
+      // border: 5px solid blue;
+      margin-top: 100px;
+      margin-bottom: 0px;
+      display: flex;
+      // justify-content: center;
+    }
+
+    .smart-tv{
+      // margin-top: 0px;
+      font-family: sans-serif;
+      font-size: 23px;
+      // margin-bottom: 5;
+      // width: 400px;
+       color: rgba(255, 255, 255, 0.9); 
+      // border: 5px solid white;
+      display: flex;
+      // justify-content: center;
     }
 }
 .fourth-splash-section{
@@ -288,6 +300,10 @@ h3 {
         display: flex;
       }
     }
+    .vid-con{
+      margin-top: 80px;
+      margin-bottom: 80px;
+    }
 }
 .fifth-splash-section{
   // position: absolute;
@@ -331,26 +347,26 @@ h3 {
       margin-right: 220px;
       margin-left: 220px;
 
-      .enjoy-tv{
-        // text-align: center;
-        // border: 5px solid blue;
-        margin-top: 100px;
-        margin-bottom: 0px;
-        display: flex;
-        // justify-content: center;
-      }
+    }
+    .enjoy-tv{
+      // text-align: center;
+      // border: 5px solid blue;
+      margin-top: 100px;
+      margin-bottom: 0px;
+      display: flex;
+      // justify-content: center;
+    }
 
-      .smart-tv{
-        // margin-top: 0px;
-        font-family: sans-serif;
-        font-size: 23px;
-        // margin-bottom: 5;
-        // width: 400px;
-         color: rgba(255, 255, 255, 0.9); 
-        // border: 5px solid white;
-        display: flex;
-        // justify-content: center;
-      }
+    .smart-tv{
+      // margin-top: 0px;
+      font-family: sans-serif;
+      font-size: 23px;
+      // margin-bottom: 5;
+      // width: 400px;
+       color: rgba(255, 255, 255, 0.9); 
+      // border: 5px solid white;
+      display: flex;
+      // justify-content: center;
     }
 }
 }
@@ -423,3 +439,16 @@ h3 {
   footer{
     background-color: gray;
   }
+
+  .download-shows{
+        margin-top: 100px;
+        margin-bottom: 0px;
+        display: flex;
+      }
+
+      .save-favorites{
+        font-family: sans-serif;
+        font-size: 23px;
+         color: rgba(255, 255, 255, 0.9);
+        display: flex;
+      }
