--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -19,6 +19,7 @@
       display: flex;
       margin: 0 0 50px 0;
       overflow-x: scroll;
+      cursor: grabbing;
       }
     //   ul::-webkit-scrollbar{
     //       display: none;
