--- a/app/assets/stylesheets/featured_movie.scss
+++ b/app/assets/stylesheets/featured_movie.scss
@@ -1,21 +1,26 @@
 .featured-movie-container{
     background-color: rgb(7, 7, 7);
     z-index: -2;
-    // position: relative;
+    position: relative;
     // margin-bottom: 40px;
     height: 100vh;
-    border: 5px solid red;
+    // border: 5px solid red;
     display: flex;
     flex-direction: column;
 
     video{
+        // border: 4px solid rgb(10, 5, 255);
+        position: absolute;
         width: 100%;
-        height: 100%;
+        // height: 100%;
+        // size: 100%;
+        z-index: -2;
+
     }
 }
 
 .featured-movie-content{
-    border: 5px solid rgb(0, 255, 106);
+    // border: 5px solid rgb(0, 255, 106);
     margin-top: 20%;
     width: 100%;
 }
@@ -79,7 +84,7 @@ margin-bottom: 5px;
 }
 
 .featured-tile-des{
-border: 5px solid gold;
+// border: 5px solid gold;
 display: flex;
 width: 40%;
 // height: 200px;
@@ -92,7 +97,7 @@ margin-bottom: 20px;
 
 .feature-title
 {
-    border: 5px sold red;
+    // border: 5px sold red;
     font-size: 70px;
 
 }
