--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -103,13 +103,14 @@
 
 .square .cover {
  object-fit: cover;
-  background: white;
+//   background: white;
   width: 100%;
 //   height:150px;
   border-radius: 10px 10px 0 0;
   background-size: cover!important;
   background-position: center!important;
 }
+
 
 .square .text {
   display: none;
@@ -144,8 +145,26 @@
 
 .modal{
     // display: block;
-    z-index: 10;
-    background-color: white;
-    width: 60%;
-    height: 50%;
+    z-index:  2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.534);
+    // width: 60%;
+    // height: 50%;
+    display: flex;
+    justify-content: center;
+
+    .modal-content{
+        // overflow-y: scroll;
+
+
+        video{
+            width: 100%;
+            height: 60%;
+            border-radius: 5px;
+        }
+    }
 }
