--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -127,6 +127,7 @@
 .square:hover {
   border-radius: 10px;
   transform: scale(1.4,2);
+//   transition-delay: .1s;
 //   width: 350vw;
 
 //   height: 420px;
@@ -143,28 +144,3 @@
     // overflow-y: visible
 }
 
-.modal{
-    // display: block;
-    z-index:  2;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.534);
-    // width: 60%;
-    // height: 50%;
-    display: flex;
-    justify-content: center;
-
-    .modal-content{
-        // overflow-y: scroll;
-
-
-        video{
-            width: 100%;
-            height: 60%;
-            border-radius: 5px;
-        }
-    }
-}
