--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -1,6 +1,6 @@
 .modal{
     // display: block;
-    z-index:  2;
+    z-index:  5;
     position: fixed;
     top: 0;
     left: 0;
@@ -53,7 +53,7 @@
             // width: 50px;
             // height: 50px;   
             position: absolute;
-            z-index: 3;
+            z-index: 6;
             // float: right;
             right: 0;
             margin-right: 1vw;
@@ -88,12 +88,19 @@
             
             
         }
+        img{
+            width: 100%;
+            height: 60%;
+            border: none;
+
+            border-radius: 10px;
+        }
 
         .movie-title-play{
-            margin-left: 2vw;
+            margin-left: 3vw;
             margin-top: 13vw;
             position: absolute;
-            z-index: 3;
+            z-index: 6;
             // height: 50%;
             // width: 50%;
             // border: 4px solid red;
@@ -104,7 +111,7 @@
             flex-direction: column;
 
                 .movie-show-title{
-                    width: 80%;
+                    width: 50%;
                     height: 150px;
                     // border: 4px solid white;
                     display: flex;
@@ -118,8 +125,8 @@
 
                     h1{
                         // height: 40px;
-                        font-size: 60px;
-                        color: red;
+                        font-size: 40px;
+                        color: rgb(255, 255, 255);
                 // border: 3px solid rgb(110, 84, 84);
 
                     }
@@ -167,18 +174,19 @@
             // z-index: 4;
             // position: absolute;
             display: flex;
-            // flex-direction: column;
-            // justify-content: center;
+            flex-direction: row;
+            justify-content: center;
             // border: 5px solid white;
             width: 50%;
             height: 80%;
             color: white;
-            font-size: 30px;
+            font-size: 5px;
             // overflow-wrap: break-word;
             // text-align: center;
 
             span{
                 color: white;
+                
                 // border: 3px solid red;
                 // width: 100%;
                 // height: 100%;
