--- a/app/assets/stylesheets/featured_movie.scss
+++ b/app/assets/stylesheets/featured_movie.scss
@@ -28,6 +28,7 @@
 }
 
 .featured-movie-content{
+    
     // border: 5px solid rgb(0, 255, 106);
     margin-top: 20%;
         z-index: 5;
@@ -67,13 +68,15 @@
         // margin-top: 1vw;
         // border: none;
         // font-size: 1vw;
-        // font-weight: bold;
+        font-weight: bold;
         // z-index: 5;
         width: 120px;
         margin-left: 38px;
         margin-right: 10px;
-        font-size: 30px;
+        font-size: 20px;
         // width: 120px;
+        border-radius: 10px;
+        letter-spacing: 1px;
        
     }
 
@@ -81,9 +84,18 @@
         margin-right: 10px;
         font-size: 30px;
         width: 165px;
-        background-color: #545455;
+        background-color: #83847F;
+        // opacity: .7;
         color: white;
-        font-size: 15px;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+
+        &:hover{
+            background-color: opacity(.4);
+        }
+
+        
 
     }
 
@@ -122,10 +134,11 @@ height: 50px;
 
 .featured-tile-des{
 // border: 5px solid gold;
+
 display: flex;
 width: 30%;
 // height: 200px;
-justify-content: center;
+justify-content: flex-start;
 // align-content: center;
 align-items: center;
 flex-direction: column;
@@ -133,8 +146,10 @@ margin-bottom: 20px;
 
 
 .feature-title
-{
-    margin-left: 50px;
+{   
+    display: flex;
+    justify-content: center;
+    // margin-left: 50px;
     // border: 5px sold red;
     font-size: 60px;
 
@@ -145,5 +160,10 @@ margin-bottom: 20px;
 .feature-description{
     margin-top: 20px;
     margin-left: 100px;
-    font-size: 20px;
+    // font-size: 20px;
+                color: white;
+                font-size: 20px;
+                font-weight: lighter;
+                letter-spacing: 1px;
+                line-height: 25px;
 }
