--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -3,18 +3,21 @@
     // position: absolute;
     // height: 100px;
     // margin-bottom: 100px;
-    // z-index: 2;
+    z-index: 5;
     
     // margin-left: 100px;
     display: flex;
     flex-direction: column;
 
         h2{
+    z-index: 5;
+
             color: white;
             font-size: 20px;
             font-weight: bold;
             letter-spacing: 1px;
-            margin: 10px 0 10px;
+            // margin: 10px 0 10px;
+            margin-left: 5vw;
         }
 
     //   ul {
@@ -83,7 +86,7 @@
 
 .genre-list{
     display: flex;
-      margin: 0 0 50px 0;
+      margin: 20px 0 50px 0;
     //   overflow-x: scroll;
     //   border: 4px solid blueviolet;
     //   position: relative;
@@ -121,7 +124,7 @@
   background: #181818;
   color: #fff;
   width: 100%;
-  height: 40%;
+  height: 30%;
   padding: 5px;
   box-sizing: border-box;
   transition: opacity 300ms ease-out, border-radius 200ms ease-out;
@@ -136,7 +139,7 @@
 .square:hover {
   border-radius: 10px;
   transform: scale(1.4,2);
-          z-index: 3;
+          z-index: 6;
 
 //   transition-delay: .1s;
 //   width: 350vw;
@@ -160,8 +163,9 @@
 }
 
 .play-card-btn{
-  height: 30px;
-                            width: 35px;
+  height: 20px;
+  align-content: center;
+                            width: 25px;
                             border-radius: 50%;
                             border: 1px solid rgb(68, 68, 68);
                             color: rgb(0, 0, 0);
@@ -171,13 +175,15 @@
                             font-weight: 200;
                             background-color: #ffffff;
                             // background-color: #2C2C2E;
-                            font-size: 20px;
+                            font-size: 15px;
                             margin-right: 5px;
 }
 
 .add-to-list-btn{
-  height: 30px;
-                            width: 35px;
+  height: 20px;
+  
+  
+                            width: 25px;
                             border-radius: 50%;
                             border: 1px solid rgb(68, 68, 68);
                             color: rgb(255, 255, 255);
@@ -187,13 +193,13 @@
                             font-weight: 100;
                             // background-color: #ffffff;
                             background-color: #2C2C2E;
-                            font-size: 20px;
+                            font-size: 15px;
                             margin-right: 5px;
 }
 
 .movie-show-page-btn{
-  height: 30px;
-                            width: 35px;
+  height: 20px;
+                            width: 25px;
                             border-radius: 50%;
                             border: 1px solid rgb(68, 68, 68);
                             color: rgb(255, 255, 255);
@@ -203,7 +209,7 @@
                             font-weight: 100;
                             // background-color: #ffffff;
                             background-color: #2C2C2E;
-                            font-size: 20px;
+                            font-size: 15px;
                             margin-right: 5px;
 }
 
