--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -36,10 +36,10 @@
             .overlay-gradient{
             position: absolute;
             background: transparent;
-            background: 
-            linear-gradient( to top, #141414, 80%, transparent);
-            opacity: .5;
-            z-index: 0;
+            background-image: 
+            linear-gradient( transparent, #141414);
+            // opacity: .5;
+            z-index: 5;
             width: 100%;
             height: 60%;
                 // border: 3px solid rgb(43, 255, 0);
@@ -126,6 +126,8 @@
                     h1{
                         // height: 40px;
                         font-size: 40px;
+                        letter-spacing: 1px;
+                        font-weight: bold;
                         color: rgb(255, 255, 255);
                 // border: 3px solid rgb(110, 84, 84);
 
@@ -134,7 +136,9 @@
 
                 .movie-show-buttons{
                     //   box-shadow: 0 0 5px 10px #555;
+                 
                     display: flex;
+                            justify-content: space-between;
                     // margin-top: 20px;
                         .play-movie-button{
                             margin-top: 8px;
@@ -144,6 +148,7 @@
                             border-radius: 5px;
                             font-size: 20px;
                             margin-right: 2px;
+                            
                 // border: 3px solid red;
 
 
@@ -177,16 +182,22 @@
             flex-direction: row;
             justify-content: center;
             // border: 5px solid white;
-            width: 50%;
+            width: 30vw;
             height: 80%;
             color: white;
             font-size: 5px;
+            // margin-left: 30px;
+            margin-top: 14vh;
             // overflow-wrap: break-word;
             // text-align: center;
 
-            span{
+            h3{
+
                 color: white;
-                
+                font-size: 20px;
+                font-weight: lighter;
+                letter-spacing: 1px;
+                line-height: 25px;
                 // border: 3px solid red;
                 // width: 100%;
                 // height: 100%;
@@ -194,4 +205,28 @@
             }
         }
     }
+}
+
+.right-btnss{
+    position: absolute;
+    // left: 0;
+    z-index: 5;
+    margin-top: 44.5vh;
+    right: 0;
+    top: 0;
+    margin-right: 5vw;
+    
+    // bottom: 0;
+}
+
+.mutee-btn{
+    border-radius: 50%;
+                            border: 1px solid rgb(68, 68, 68);
+                            color: gray;
+                            background: none;
+                            z-index: 3;
+                            cursor: pointer;
+                            font-weight: 200;
+                            background-color: #2C2C2E;
+                            font-size: 30px;
 }
