myList at 90% funtionality

--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -163,7 +163,7 @@
                             border: 1px solid rgb(68, 68, 68);
                             color: gray;
                             background: none;
-                            z-index: 3;
+                            // z-index: 3;
                             cursor: pointer;
                             font-weight: 200;
                             background-color: #2C2C2E;
