--- a/app/assets/stylesheets/browse_header.scss
+++ b/app/assets/stylesheets/browse_header.scss
@@ -11,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     // width: 100%;
+    // border: 5px solid red;
     
 }
 
@@ -45,7 +46,40 @@
 }
 
 .settings-container{
-    // border: 4px solid red;
+    // border: 4px solid rgb(17, 0, 255);
     margin-right: 90px;
     margin-top: 12px;
+}
+
+.dropdown-container{
+    // border: 5px solid red;
+    position: relative;
+    display: inline-block;
+    margin-left: 30px;
+    height: 40px;
+}
+
+.dropdown{
+ display: none;
+  position: absolute;
+  top: 40px;
+  right: 20px;
+  background-color: rgba(0, 0, 0, 0.8);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border:  0.25px solid rgba(128, 128, 128, .4);
+  font-size: 14px;
+}
+
+.dropdown span {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+.dropdown-container:hover .dropdown{
+    display: block;
 }
