--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -125,7 +125,7 @@
 
                     h1{
                         // height: 40px;
-                        font-size: 40px;
+                        font-size: 55px;
                         letter-spacing: 1px;
                         font-weight: bold;
                         color: rgb(255, 255, 255);
@@ -147,7 +147,9 @@
                             width: 150px;
                             border-radius: 5px;
                             font-size: 20px;
-                            margin-right: 2px;
+                            margin-right: 10px;
+                            font-weight: bold;
+                            // margin-bottom: 5px;
                             
                 // border: 3px solid red;
 
@@ -155,21 +157,24 @@
                         }
 
                         .add-to-list-button{
-                            margin-top: 10px;
+                            margin-top: 15px;
                             // color: red;
                             height: 40px;
                             width: 40px;
                             border-radius: 50%;
                             border: 1px solid rgb(68, 68, 68);
-                            color: gray;
+                            color: rgb(255, 255, 255);
                             background: none;
+                            border-color: rgb(129, 128, 128);
                             // z-index: 3;
                             cursor: pointer;
                             font-weight: 200;
                             background-color: #2C2C2E;
                             font-size: 30px;
                 // border: 3px solid red;
-                            
+                            &:hover{
+                                border-color: white;
+                            }
                         }
                 }
             
