--- a/app/assets/stylesheets/my_lists.scss
+++ b/app/assets/stylesheets/my_lists.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the myLists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.list{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    
+}
