--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -11,7 +11,7 @@
     // height: 50%;
     display: flex;
     justify-content: center;
-    overflow-y: scroll;
+    overflow-y: hidden;
                 // border: 3px solid red;
 
     
