--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -91,7 +91,8 @@
     //   border: 4px solid blueviolet;
     //   position: relative;
     // overflow: hidden;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    
     margin-left: 5vw ;
     margin-right: 5vw ;
 }
@@ -111,7 +112,7 @@
  object-fit: cover;
 //   background: white;
   z-index: 6;
-  // height: 90%;
+  // height: 60%;
   width: 100%;
   // height:150px;
   border-radius: 10px 10px 0 0;
@@ -142,7 +143,7 @@
 
 .square:hover {
   border-radius: 10px;
-  transform: scale(1.4,2);
+  transform: scale(1.4,1.6);
           z-index: 6;
 
 //   transition-delay: .1s;
@@ -151,6 +152,11 @@
 //   height: 420px;
   box-shadow: 0 0 2px #000a;
 }
+
+.square:hover .cover{
+  height: 60%;
+}
+
 
 .square:hover .text {
   display: block;
@@ -204,6 +210,7 @@
 
                             &:hover{
                             border-color: rgb(255, 255, 255);
+                            cursor: pointer;
 
                             }
 }
@@ -216,7 +223,7 @@
                             border: 1px solid rgb(68, 68, 68);
                             color: rgb(255, 255, 255);
                             background: none;
-                            z-index: 3;
+                            z-index: 7;
                             cursor: pointer;
                             font-weight: bold;
                             // background-color: #ffffff;
@@ -227,6 +234,7 @@
 
                             &:hover{
                             border-color: rgb(255, 255, 255);
+                            cursor: pointer;
 
                             }
 }
